kubernetes/apps/security/kanidm/app/referencegrant.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/referencegrant_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: kanidm-oidc
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: home
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: kube-system
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: observability
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: flux-system
  to:
    - group: ""
      kind: Service
      name: kanidm
