kubernetes/apps/security/kanidm/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kanidm
  annotations:
    gatus.home-operations.com/endpoint: |-
      path: /status
      conditions: ["[STATUS] == 200"]
spec:
  hostnames:
    - idm.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: kanidm
          port: 8443
